pod-security-cel/restricted/require-run-as-non-root-user/require-run-as-non-root-user.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: require-run-as-non-root-user
  annotations:
    policies.kyverno.io/title: Require Run As Non-Root User in CEL
    policies.kyverno.io/category: Pod Security Standards (Restricted) in CEL
    policies.kyverno.io/severity: medium
    policies.kyverno.io/subject: Pod
    policies.kyverno.io/minversion: 1.11.0
    kyverno.io/kyverno-version: 1.11.0
    kyverno.io/kubernetes-version: "1.26-1.27"
    policies.kyverno.io/description: >-
      Containers must be required to run as non-root users. This policy ensures
      `runAsUser` is either unset or set to a number greater than zero.
spec:
  validationFailureAction: Audit
  background: true
  rules:
    - name: run-as-non-root-user
      match:
        any:
          - resources:
              kinds:
                - Pod
              operations:
                - CREATE
                - UPDATE
      validate:
        cel:
          variables:
            - name: allContainers
              expression: >-
                object.spec.containers +
                object.spec.?initContainers.orValue([]) +
                object.spec.?ephemeralContainers.orValue([])
          expressions:
            - expression: >-
                !has(object.spec.securityContext) ||
                !has(object.spec.securityContext.runAsUser) ||
                object.spec.securityContext.runAsUser > 0
              message: >-
                Running as root is not allowed. The field spec.securityContext.runAsUser must be unset or
                set to a number greater than zero.
            - expression: >-
                variables.allContainers.all(container,
                  !has(container.securityContext) ||
                  !has(container.securityContext.runAsUser) ||
                  container.securityContext.runAsUser > 0
                )
              message: >-
                Running as root is not allowed. The field securityContext.runAsUser in all containers must be unset or
                set to a number greater than zero.
